RESOLVED FIXED126747
Compile fix for WinCairo after iOS upstreaming
https://bugs.webkit.org/show_bug.cgi?id=126747
Summary Compile fix for WinCairo after iOS upstreaming
Alex Christensen
Reported 2014-01-10 07:10:53 PST
WinCairo needs NotImplemented.h to compile ResourceHandle.cpp successfully. http://build.webkit.org/builders/WinCairo%20Release/builds/35033/steps/compile-webkit/logs/stdio
Attachments
Patch (1.22 KB, patch)
2014-01-10 07:12 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2014-01-10 07:12:15 PST
WebKit Commit Bot
Comment 2 2014-01-10 08:23:30 PST
Comment on attachment 220839 [details] Patch Clearing flags on attachment: 220839 Committed r161635: <http://trac.webkit.org/changeset/161635>
WebKit Commit Bot
Comment 3 2014-01-10 08:23:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.