[WinCairo] Build fix after r161589. https://bugs.webkit.org/show_bug.cgi?id=126747

Patch by Alex Christensen <achristensen@webkit.org> on 2014-01-10
Reviewed by Anders Carlsson.

* platform/network/ResourceHandle.cpp:
Include NotImplemented.h for all platforms.

Canonical link: https://commits.webkit.org/144645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161635 268f45cc-cd09-0410-ab3c-d52691b4dbfc